Prevent jumping when invalid

--- a/src/main/content/_assets/css/downloads.scss
+++ b/src/main/content/_assets/css/downloads.scss
@@ -201,6 +201,7 @@ html, body {
 
     #base_package_section {
         margin-right: 94px;
+        min-width: 350px;
     }
 
     #java_version_section {
